sincronizacion con siip: CU-PRE-01.5, seeders y configuracion de sonarqube.